Dockerize the Frontend (Angular)